fixed spacing on pricing cards

--- a/client/src/Styles/PricingStructureStyles.css
+++ b/client/src/Styles/PricingStructureStyles.css
@@ -71,12 +71,13 @@
 
   li{
     margin-bottom: 15px;
-    font-size: 1.2rem;
-    text-align: start;
+    font-size: 16px;
+    text-align: center;
   }
 
   .included-features{
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     text-decoration: underline;
   }
 
